# tacrs_demo_atomos_ws

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml
src/site_configs/atomos_xlink_hw_config/: CMakeLists.txt  package.xml  temp.rviz
src/site_configs/atomos_xlink_hw_config/config/: config.yaml
src/site_configs/atomos_xlink_hw_config/config/fuse/: fuse.rviz  fuse.yaml
src/site_configs/atomos_xlink_hw_config/config/moveit/: atomos_xlink.srdf
src/site_configs/atomos_xlink_hw_config/config/zed/: camer_calibration_original.conf
src/site_configs/atomos_xlink_hw_config/description/: motiv_xlink_atomos.mock.urdf
src/site_configs/atomos_xlink_hw_config/description/assets/: craft.stl  xlink_rafti_finger.stl
src/site_configs/atomos_xlink_hw_config/launch/: 36h11.launch.yml  36h11_calibration.launch.yml  36h11_right.launch.yml  agent_bridge.launch.xml  call_estop_service.launch.py  cameras.launch.xml  fuse.launch.py  pro_rs_launch.py  realsense.launch.xml  tags_36h11_calibration.yaml
src/site_configs/atomos_xlink_hw_config/objectives/: calibrate_camera_at_waypoint_36h11.xml  calibrate_scene_camera_36h11.xml  calibrate_zed_cam_from_apriltag_ros.xml  calibration_pose.txt  grapple_rafti_-_decelerate.xml  grapple_rafti_-_no_gripper.xml  grapple_rafti_-_no_track_after_contact.xml  grapple_rafti_-_no_track_after_contact_2.xml  posejog_test.xml  teleoperate.xml
src/site_configs/atomos_xlink_hw_config/waypoints/: waypoints.yaml
